rating feature established